	load-path, to ensure that interdependent elisp files are visible
	between themselves.

2008-08-10  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Fix issue with empty
	einfo lines. Indent here-document. Change wording of message,
	"no longer" -> "not", since the underlying change from
	site-start.el to site-gentoo.el was in 2004.

2008-05-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (SIMPLE_ELISP): Remove variable.
	(elisp_src_unpack): Always move ${P}.el to ${PN}.el if the former
	exists.

2008-05-18  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Create file for
	backwards compatibility only if obsolete files were found.

2008-03-28  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Check if the SITELISP
	directory exists.

2008-03-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Work around Paludis
	borkage, where variable T is empty in pkg_postrm. Thanks to
	Stelian Ionescu for pointing this out.

2008-03-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install)
	(elisp-site-regen, elisp-emacs-version): Clean up temporary files.

	* elisp.eclass (EXPORT_FUNCTIONS): Call only once, according to
	section 7.3 of the PMS draft.

2008-02-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Don't output warning if
	site-gentoo.el file is unchanged.

2007-12-17  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Note new installation
	directory in the output intended for the user and refer to
	emacs-updater

2007-12-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Redirect input of cat
	command to /dev/null, otherwise it will hang if the list of files
	is empty. Thanks to Sebastien Fabbro <bicatali@gentoo.org> for
	pointing this out.

2007-12-11  Ulrich Mueller  <ulm@gentoo.org>
